2005-04-21  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-surface.c (_cairo_surface_set_clip_region): Handle
	backends that don't have a set_clip_region implementation (PDF).

2005-04-19  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (cairo_paint):
	* src/cairo.h: Add new cairo_paint function.

	* src/cairoint.h: Add new get_extents function to the surface
	backend interface.

	* src/cairo-gstate.c: (_cairo_gstate_get_clip_extents): Add
	function to query current clip_extents.

	* src/cairo-glitz-surface.c: (_cairo_glitz_surface_get_extents):
	* src/cairo-image-surface.c: (_cairo_image_surface_get_extents),
	(_cairo_image_abstract_surface_get_extents):
	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_get_extents):
	* src/cairo-ps-surface.c: (_cairo_ps_surface_get_extents):
	* src/cairo-quartz-surface.c: (_cairo_quartz_surface_get_extents):
	* src/cairo-win32-surface.c: (_cairo_win32_get_extents):
	* src/cairo-xcb-surface.c: (_cairo_xcb_surface_get_extents):
	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_get_extents):
	Implement the new get_extents function for each backend.
	
	* src/cairo-surface.c: (_cairo_surface_init),
	(_cairo_surface_set_clip_region),
	(_cairo_surface_get_clip_extents): Save the clip extents from
	set_clip_region and implement _cairo_surface_get_clip_extents.

	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_get_size),
	(_get_image_surface): Abstract away the evil XGetGeometry
	roundtrip in _cairo_xlib_surface_get_size.
	
	* test/gradient-alpha.c: (draw):
	* test/linear-gradient.c: (draw): Rewrite a couple of tests to
	call cairo_paint.

2005-04-19  Carl Worth  <cworth@cworth.org>

	* TODO: Update API Shakeup chart to indicate that cairo_paint and
	cairo_fill_preserve patches have been sent.

2005-04-19  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/surface-pattern-ref.png:
	* test/surface-pattern.c: (draw), (main): Add a test of a
	repeating surface pattern.
